# ai-research-copilot

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: Mastering Gradient Descent A Practical Guide for Developers  State of Multimodal LLMs in 2026: Trends, Breakthroughs, and Implications.md  copilot_v1.ipynb  copilot_v2.ipynb  copilot_v3.ipynb  mastering_gradient_descent:_a_comprehensive_guide_for_beginners_and_beyond.md  understanding_self-attention:_the_heart_of_modern_deep_learning.md
src/: graph_app.py  models.py
