[project]
name = "ai-research-copilot"
version = "0.1.0"
description = "Notebook-driven starter project for building a maintainable and scalable RAG research copilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "langchain-community>=0.4.1",
    "langchain-tavily>=0.2.13",
    "langchain-mistralai>=1.1.2",
    "langgraph>=1.1.10",
]
